syntax = "proto3";
option java_package = "com.kgds.grpc.service.squareroot";
import "models/Square.proto";


service SquareRootService {
    rpc getSquareRoot (square.SquareRootRequest) returns (square.SquareRootResponse);
}